--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ContactsTest</string>
+    <string name="retrieve_contact">Retrieve phone number</string>
+    <string name="retrieve_contacts">Retrieve contacts list</string>
 </resources>
